--- a/env.example
+++ b/env.example
@@ -1,8 +1,8 @@
 # Telegram Bot 配置
-BOT_TOKEN=YOUR_BOT_TOKEN_HERE
-CHANNEL_USERNAME=your_channel
-CHANNEL_URL=https://t.me/your_channel
-ADMIN_USER_ID=123456789
+BOT_TOKEN=8575952388:AAHW6OVzp7TVZKiDxiE-03_ymld6UE63ZqQ
+CHANNEL_USERNAME=@Sheeridverify7_bot
+CHANNEL_URL=https://t.me/Sheeridverify7_bot
+ADMIN_USER_ID=7029370127
 
 # MySQL 数据库配置
 MYSQL_HOST=localhost
