--- a/env.example
+++ b/env.example
@@ -1,6 +1,6 @@
 # Telegram Bot 配置
 BOT_TOKEN=8575952388:AAHW6OVzp7TVZKiDxiE-03_ymld6UE63ZqQ
-CHANNEL_USERNAME=@Sheeridverify7_bot
+CHANNEL_USERNAME=Sheeridverify7_bot
 CHANNEL_URL=https://t.me/Sheeridverify7_bot
 ADMIN_USER_ID=7029370127
 
